--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PPI Turki statistik</title>
-    <script type="text/javascript" src="d3/d3.v3.js"></script>
+    <!-- <script type="text/javascript" src="d3/d3.v3.js"></script> -->
     <script type="text/javascript" src="d3/topojson.v1.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="index.css">
+    <script src="https://d3js.org/d3.v4.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
     <div>
@@ -23,9 +24,7 @@
     <div id="map-chart" class="flex justify-center w-auto text-xs" style="border: 2px;"></div>
 
     <div>
-        <div>
             Total Mahasiswa : 4662
-        </div>
     </div>
 
     <div>
